src/test/ui/issues/issue-19380.stderr
error[E0038]: the trait `Qiz` cannot be made into an object
  --> $DIR/issue-19380.rs:11:3
   |
LL |   foos: &'static [&'static (dyn Qiz + 'static)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Qiz` cannot be made into an object
   |
   = note: method `qiz` has no receiver

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
